--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
+    <style name="Heading3">
+        <item name="android:textSize">32sp</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+    </style>
+
     <style name="Button1">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
@@ -27,12 +32,12 @@
     </style>
 
     <style name="RegularText">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="SmallText">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="fontFamily">@font/montserrat_light</item>
     </style>
 
