--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,9 +26,17 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.cookspot.feature.authentication.LoginFragment"
-        android:label="LoginFragment" />
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_feedFragment"
+            app:destination="@id/feedFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.cookspot.feature.authentication.RegisterFragment"
         android:label="RegisterFragment" />
+    <fragment
+        android:id="@+id/feedFragment"
+        android:name="com.example.cookspot.feature.feed.FeedFragment"
+        android:label="FeedFragment" />
 </navigation>
