Worked on profile page

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,11 @@
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
+    <style name="Subtitle1">
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+    </style>
+
     <style name="Button1">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
@@ -31,9 +36,19 @@
         <item name="fontFamily">@font/montserrat_regular</item>
     </style>
 
+    <style name="Button3">
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/montserrat_bold</item>
+    </style>
+
     <style name="RegularText">
         <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
+
+    <style name="RegularTextBold">
+        <item name="android:textSize">20sp</item>
+        <item name="fontFamily">@font/montserrat_bold</item>
     </style>
 
     <style name="SmallText">
@@ -59,6 +74,20 @@
         <item name="android:outlineProvider">none</item>
         <item name="android:minHeight">@dimen/button_height</item>
         <item name="android:textAppearance">@style/Button1</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="PrimaryButtonWhite" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/primary_orange</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:background">@drawable/bg_primary_button_white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:minHeight">@dimen/button_height</item>
+        <item name="android:textAppearance">@style/Button3</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
