--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,19 +2,140 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/main_background">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/profilePictureCIV"
         android:layout_width="0dp"
-        android:layout_marginHorizontal="92dp"
-        android:layout_marginTop="64dp"
         android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginHorizontal="120dp"
+        android:layout_marginTop="64dp"
         android:src="@drawable/cat_profile"
+        app:civ_border_width="2dp"
+        app:civ_shadow="true"
+        app:civ_shadow_color="#3A3B42"
+        app:civ_shadow_radius="1dp"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/userFullNameTV"
+        style="@style/Heading1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="12dp"
+        android:text="Ianis Teja"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profilePictureCIV" />
+
+    <TextView
+        android:id="@+id/postedTV"
+        style="@style/Subtitle1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="Posted"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintEnd_toStartOf="@id/savedTV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postedNumberTV" />
+
+    <TextView
+        android:id="@+id/postedNumberTV"
+        style="@style/RegularTextBold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="25"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintEnd_toEndOf="@id/postedTV"
+        app:layout_constraintStart_toStartOf="@id/postedTV"
+        app:layout_constraintTop_toBottomOf="@id/userFullNameTV" />
+
+    <TextView
+        android:id="@+id/savedTV"
+        style="@style/Subtitle1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Saved"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintBottom_toBottomOf="@id/postedTV"
+        app:layout_constraintEnd_toEndOf="@id/cookedTV"
+        app:layout_constraintStart_toEndOf="@id/postedTV"
+        app:layout_constraintTop_toTopOf="@id/postedTV" />
+
+    <TextView
+        android:id="@+id/savedNumberTV"
+        style="@style/RegularTextBold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="25"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintBottom_toBottomOf="@id/postedNumberTV"
+        app:layout_constraintEnd_toEndOf="@id/savedTV"
+        app:layout_constraintStart_toStartOf="@id/savedTV"
+        app:layout_constraintTop_toTopOf="@id/postedNumberTV" />
+
+    <TextView
+        android:id="@+id/cookedTV"
+        style="@style/Subtitle1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:text="Cooked"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintBottom_toBottomOf="@id/postedTV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/savedTV"
+        app:layout_constraintTop_toTopOf="@id/postedTV" />
+
+    <TextView
+        android:id="@+id/cookedNumberTV"
+        style="@style/RegularTextBold"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="25"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintBottom_toBottomOf="@id/postedNumberTV"
+        app:layout_constraintEnd_toEndOf="@id/cookedTV"
+        app:layout_constraintStart_toStartOf="@id/cookedTV"
+        app:layout_constraintTop_toTopOf="@id/postedNumberTV" />
+
+    <Button
+        android:id="@+id/editProfileBtn"
+        style="@style/PrimaryButtonWhite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        android:text="Edit Profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postedTV" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:dividerColor="@color/neutral_white"
+        app:dividerThickness="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editProfileBtn" />
 
     <include
         android:id="@+id/bottomNavigationBarCL"
