--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,6 +36,20 @@
         app:layout_constraintTop_toBottomOf="@id/profilePictureCIV" />
 
     <TextView
+        android:id="@+id/usernameTV"
+        style="@style/Subtitle1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="12dp"
+        android:text="@ianist227"
+        android:textAlignment="center"
+        android:textColor="@color/neutral_white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userFullNameTV" />
+
+    <TextView
         android:id="@+id/postedTV"
         style="@style/Subtitle1"
         android:layout_width="0dp"
@@ -59,7 +73,7 @@
         android:textColor="@color/neutral_white"
         app:layout_constraintEnd_toEndOf="@id/postedTV"
         app:layout_constraintStart_toStartOf="@id/postedTV"
-        app:layout_constraintTop_toBottomOf="@id/userFullNameTV" />
+        app:layout_constraintTop_toBottomOf="@id/usernameTV" />
 
     <TextView
         android:id="@+id/savedTV"
