--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,12 @@
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
+    <style name="Heading4">
+        <item name="android:textSize">24sp</item>
+        <item name="fontFamily">@font/montserrat_extrabold</item>
+        <item name="android:textColor">@color/neutral_black</item>
+    </style>
+
     <style name="Button1">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
@@ -55,6 +61,12 @@
         <item name="android:textSize">12sp</item>
         <item name="fontFamily">@font/montserrat_light</item>
     </style>
+
+    <style name="TagText">
+        <item name="android:textSize">12sp</item>
+        <item name="fontFamily">@font/montserrat_semibold</item>
+    </style>
+
 
     <style name="RoundedTopCardViewStyle">
         <item name="cornerFamily">rounded</item>
@@ -103,6 +115,21 @@
         <item name="android:minHeight">@dimen/button_height</item>
         <item name="android:textAppearance">@style/Button1</item>
         <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="TagTextView" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@null</item>
+        <item name="android:background">@drawable/bg_primary_button</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:minHeight">@dimen/tag_height</item>
+        <item name="android:textAppearance">@style/TagText</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:ellipsize">end</item>
     </style>
 
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
