--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -130,11 +130,11 @@
                     android:text="@string/emailText"
                     android:textAllCaps="true"
                     android:textColor="@color/dark_orange"
-                    app:layout_constraintBottom_toTopOf="@id/emailTIL"
+                    app:layout_constraintBottom_toTopOf="@id/titleTIL"
                     app:layout_constraintStart_toStartOf="@id/welcomeTV" />
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/emailTIL"
+                    android:id="@+id/titleTIL"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
@@ -145,7 +145,7 @@
                     app:layout_constraintStart_toStartOf="@id/welcomeTV">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/emailTIEE"
+                        android:id="@+id/titleTIEE"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/bg_rounded_edit_text"
