--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,11 @@
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
+    <style name="Subtitle2">
+        <item name="android:textSize">24sp</item>
+        <item name="fontFamily">@font/montserrat_semibold</item>
+    </style>
+
     <style name="Heading4">
         <item name="android:textSize">24sp</item>
         <item name="fontFamily">@font/montserrat_extrabold</item>
@@ -50,6 +55,11 @@
     <style name="RegularText">
         <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
+
+    <style name="RegularTextSemiBold">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_semibold</item>
     </style>
 
     <style name="RegularTextBold">
@@ -117,6 +127,20 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="OutlinedButtonWhite" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/neutral_white</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:background">@drawable/bg_outlined_btn_white</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:outlineProvider">none</item>
+        <item name="android:minHeight">@dimen/button_height</item>
+        <item name="android:textAppearance">@style/Button3</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
     <style name="TagTextView" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@null</item>
         <item name="android:background">@drawable/bg_primary_button</item>
@@ -146,5 +170,4 @@
         <item name="backgroundTint">@android:color/transparent</item>
         <item name="android:textColor">@color/neutral_white</item>
     </style>
-
 </resources>
